--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -12,5 +12,8 @@ cask "keyboardcleantool"
 cask "spotify"
 cask "tiles"
 cask "visual-studio-code"
+cask "windows-app"
 vscode "github.github-vscode-theme"
+vscode "mhutchie.git-graph"
+vscode "tabnine.tabnine-vscode"
 vscode "vscode-icons-team.vscode-icons"
