--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -8,6 +8,7 @@ cask "arc"
 cask "caffeine"
 cask "clipy"
 cask "docker"
+cask "jordanbaird-ice"
 cask "keyboardcleantool"
 cask "spotify"
 cask "tiles"
