--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -1,20 +1,13 @@
 tap "homebrew/bundle"
-brew "exiftool"
 brew "git"
-brew "htop"
-brew "pyenv"
-brew "tree"
 cask "arc"
 cask "caffeine"
 cask "clipy"
 cask "docker"
 cask "jordanbaird-ice"
 cask "keyboardcleantool"
-cask "spotify"
-cask "tiles"
+cask "rectangle"
 cask "visual-studio-code"
 cask "windows-app"
 vscode "github.github-vscode-theme"
-vscode "mhutchie.git-graph"
-vscode "tabnine.tabnine-vscode"
 vscode "vscode-icons-team.vscode-icons"
