--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -3,11 +3,10 @@ brew "git"
 brew "wget"
 cask "arc"
 cask "caffeine"
-cask "clipy"
 cask "docker"
 cask "jordanbaird-ice"
 cask "keyboardcleantool"
-cask "rectangle"
+cask "raycast"
 cask "visual-studio-code"
 cask "windows-app"
 vscode "github.github-vscode-theme"
