--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -6,6 +6,7 @@ cask "caffeine"
 cask "docker"
 cask "jordanbaird-ice"
 cask "keyboardcleantool"
+cask "obs"
 cask "raycast"
 cask "visual-studio-code"
 cask "windows-app"
