--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -2,7 +2,7 @@ tap "homebrew/bundle"
 brew "git"
 brew "wget"
 cask "arc"
-cask "caffeine"
+cask "balenaetcher"
 cask "docker"
 cask "jordanbaird-ice"
 cask "keyboardcleantool"
