--- a/Homebrew/Brewfile
+++ b/Homebrew/Brewfile
@@ -8,7 +8,8 @@ cask "jordanbaird-ice"
 cask "keyboardcleantool"
 cask "obs"
 cask "raycast"
+cask "rustdesk"
+cask "tailscale-app"
 cask "visual-studio-code"
-cask "windows-app"
 vscode "github.github-vscode-theme"
 vscode "vscode-icons-team.vscode-icons"
